# term-py

./: .gitattributes  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md
src/codechu_term/: __init__.py  alt_buffer.py  caps.py  raw.py  resize.py  streams.py
tests/: test_alt_buffer.py  test_caps.py  test_raw.py  test_resize.py  test_streams.py
